--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   "author": "Bill Cheng",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "config": "^3.3.6",
+    "express": "^4.17.1",
+    "mocha": "^9.0.3",
+    "mongoose": "^5.13.7",
+    "mysql2": "^2.3.0",
+    "q": "^1.5.1",
+    "request": "^2.88.2",
+    "underscore": "^1.13.1"
   }
 }
