--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mocha": "^9.0.3",
     "mongoose": "^5.13.7",
     "mysql2": "^2.3.0",
+    "node-fetch": "^2.6.1",
     "q": "^1.5.1",
     "request": "^2.88.2",
     "underscore": "^1.13.1"
